# dist-git

./: .gitignore  .packit.yaml  COPYING  LICENSE  Makefile.am  README.md  Vagrantfile  bootstrap  changes.txt  configure.ac  dist-git.spec  install-dist-git.sh  rpkg.conf
.github/workflows/: new-issues-to-fedora-copr-board.yml
.tito/: releasers.conf  tito.props
beaker-tests/: PURPOSE  README.md  run.sh  setup.sh
beaker-tests/pkgs-files/: ca-bundle.crt  fedora.cert  lookaside-upload.conf  pkgs.example.org.pem  server.key  server.pem  user.crt  user.csr  user.key
beaker-tests/tests/: manifest.js.prev  sources
build_aux/: build-selinux-module  install-selinux-module.in
configs/: Makefile.inc
configs/cron/: cgit_pkg_list.cron  dist_git_sync.cron
configs/dist-git/: .dist-git.conf.swp  dist-git.conf
configs/gitolite/: gitolite.rc
configs/httpd/: ssl.conf
configs/systemd/: dist-git-gc.service  dist-git-gc.timer  dist-git@.service  git@.service
dist-git/: LICENSE  README.md  dist-git.spec
dist-git-client/: README.md  dist-git-client  dist-git-client.spec  dist_git_client.py  run_tests.sh  tags
dist-git-client/etc/: default.ini
dist-git-client/tests/: test_dist_git_client.py  test_url_parser.py
dist-git/beaker-tests/: Makefile
dist-git/tests/: test_upload_script.py
distgit/: upload.py
files/: cgitrc  clean-lock.cron  dist-git-upload.cgi  dist_git_main.conf  fedmsg-genacls-config.py  genacls.cron  genacls.pkgdb  genacls.sh  git-smart-http.conf  git.j2  git@.service  git@.service.j2  gitolite.rc  gitolite_admins  lookaside-upload.conf  lookaside.conf  make-cgit-pkgs-list.sh  mkbranch  pkgdb2-clone  pkgdb_sync_git_branches.py  pkgs.fedoraproject.org.conf  setup_git_package  updatecrl.sh  upload_cgi.te
files/scripts/: dist_git_sync.sh  git_branch.sh  pkgdb_gen_gitolite_conf.py
files/unused/: cgitrc  pkgdb2-clone  redirect.conf  upload_cgi.pp
m4/: _ax_text_tpl.m4
scripts/dist-git/: .gitignore  Makefile.inc  cgit_pkg_list  dist-git-gc  (+14 more)
selinux/: .gitignore  Makefile.inc  dist_git.fc  dist_git.if  dist_git.te
tests/: test_upload_script.py
tmp/: Vagrantfile
(+60 files in other folders)
